# kodi-nfo-cli

./: .gitmodules  CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
cmake/modules/: FindCURLpp.cmake
core/: CMakeLists.txt  info.h  nfo.h  queryoptions.h  scrapper.cpp  scrapper.h  scrapperbackend.h
core/themoviedb/: config.cpp  config.h  tmdscrapper.cpp  tmdscrapper.h
